--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="robots" content="noindex">
+    <title>Pancarte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="custom.css">
   </head>
   <body>
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary" style="font-size:1.2em">
-        <a class="navbar-brand" style="color:#fff;font-size:1.2rem">Pancarte Project</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="font-size:1.2em">
+        <a href="index.html" class="navbar-brand" style="color:#fff;font-size:1.2rem">Pancarte Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse" id="navbarColor02">
           <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="acquisition.html">Acquisition</a>
@@ -38,10 +39,7 @@
 
     <div class="container">
       <div class="bs-docs-section clearfix" style="margin-top:100px;">
-
-
-        <!-- Blockquotes -->
-
+        <title>The Pancarte Open Source Project</title>
         <div class="row">
           <div class="col-lg-12">
             <div class="bs-component">
@@ -52,8 +50,8 @@
           </div>
         </div>
       </div>
-      
-      <img style="margin-top: 50px; margin-bottom: 50px;" src="global.v2-notitle.png" class="img-fluid" alt="Pancarte Architecture" usemap="#archilinks">
+      <title>Overall architecture</title>
+      <img src="global.v2-notitle.png" class="img-fluid" alt="Pancarte Architecture" usemap="#archilinks">
 
       <map name="archilinks">
         <area shape="rect" coords="334,620,510,756" href="acquisition.html"> <!-- Kafka -->
@@ -65,6 +63,7 @@
         <area shape="rect" coords="1010,640,1235,865" href="visualization.html"> <!-- Hospital -->
       </map>
 
+      <title>Project timeline</title>
       <table class="table table-hover">
         <thead>
           <tr>
@@ -118,7 +117,7 @@
             <td>Fall 2018</td>
           </tr>
         </tbody>
-      </table> 
+      </table>
 
       <footer id="footer">
         <div class="row">
