Add Philips ethernet in acquisition

--- a/acquisition.html
+++ b/acquisition.html
@@ -85,7 +85,7 @@
             <h3 class="card-header">Using the network</h3>
             <img style="width: 100%; display: block;" src="acquisition-ethernet.png" alt="Card image">
             <div class="card-body">
-              <p class="card-text">This option requires that monitors have an ethernet output. We tend to think that monitors will more and more be ethernet-wired in the future, and at the end this might be one of the best solutions (cost/room ~<b>40€</b> (switch+cables)). But until you update your monitors, we invite you to consider the Digiconnect or SBC solution.
+              <p class="card-text">This option requires that monitors have an ethernet output. We tend to think that monitors will more and more be ethernet-wired in the future, and at the end this might be one of the best solutions (cost/room ~<b>40€</b> (switch+cables)). But until you update your monitors, we invite you to consider the Digiconnect or SBC solution. You can view below whether your monitors are compatible with Ethernet.
               </p>
             </div>
           </div>
@@ -129,7 +129,7 @@
             <td>Ethernet</td>
             <td>All</td>
             <td>MD PnP</td>
-            <td>(On demand)</td>
+            <td>Available</td>
           </tr>
           <tr>
             <td>Covidien</td>
