--- a/acquisition.html
+++ b/acquisition.html
@@ -124,7 +124,7 @@
             <td>MD PnP</td>
             <td>Available</td>
           </tr>
-          <tr>
+          <tr class="table-success">
             <td>Philips MPxx</td>
             <td>Ethernet</td>
             <td>All</td>
