--- a/visualization.html
+++ b/visualization.html
@@ -51,7 +51,7 @@
                       <li>Real-time dashboard</li>
                     </ul>
                   <br>
-                  Backend-end source code: <a target="_blank" href="https://github.com/EDS-APHP/pancarte-backend">github.com/EDS-APHP/pancarte-backend</a><br>
+                  Back-end source code: <a target="_blank" href="https://github.com/EDS-APHP/pancarte-backend">github.com/EDS-APHP/pancarte-backend</a><br>
                   Front-end source code: <a target="_blank" href="https://github.com/EDS-APHP/pancarte-front">github.com/EDS-APHP/pancarte-front</a>
                 </p>
               </blockquote>
