--- a/acquisition.html
+++ b/acquisition.html
@@ -126,6 +126,8 @@
               <ul>
                 <li><a target="_blank" href="http://www.capsuletech.fr/">Qualcomm Capsule</a> (cost/room <b>10000€</b>)</li>
                 <li><a target="_blank" href="https://www.enovacom.fr/landing-page/connexion-appareils-biomedicaux">Enovacom Patient Connect</a> (cost/room <b>n.a.</b>)</li>
+                <li><a target="_blank" href="https://www.trueprocess.com">True Process</a> (cost/room <b>n.a.</b>)</li>
+                <li><a target="_blank" href="http://bernoullihealth.com/">Bernouilli</a> (cost/room <b>n.a.</b>)</li>
               </ul>
             </div>
           </div>
